# kind-generics.hs

./: .gitignore  cabal.project  kind-generics.cabal  stack.yaml
kind-algebras/: kind-algebras.cabal
kind-algebras/src/: Benchmarks.hs
kind-algebras/src/Generics/Kind/: Algebras.hs  Inductor.hs  InductorSimpleGADTs.hs  InductorSimplified.hs  Recursor.hs  RecursorConstraints.hs  RecursorConstraintsSimplified.hs  RecursorSimple.hs  RecursorSimpleGADTs.hs
kind-apply/: kind-apply.cabal
kind-apply/src/Data/: PolyKinded.hs
kind-apply/src/Data/Functor/: PolyKinded.hs
kind-apply/src/Data/PolyKinded/: Atom.hs  Functor.hs
kind-apply/src/Data/PolyKinded/Atom/: Rec.hs
kind-apply/src/GHC/Generics/: Extra.hs
kind-generics/: CHANGELOG.md  README.md  kind-generics.cabal
kind-generics-deriving/: kind-generics-deriving.cabal
kind-generics-deriving/src/Generics/Kind/Derive/: Eq.hs  EqTwoParams.hs  Examples.hs  Functor.hs  FunctorLast.hs  FunctorOne.hs  FunctorPosition.hs  FunctorSimple.hs  Json.hs  KFunctor.hs  Traversable.hs
kind-generics-sop/: kind-generics-sop.cabal
kind-generics-sop/src/Generics/SOP/: Kind.hs
kind-generics-sop/src/Generics/SOP/Kind/: Examples.hs
kind-generics-sop/src/Generics/SOP/Kind/Derive/: Eq.hs  Functor.hs
kind-generics-th/: README.md  kind-generics-th.cabal
kind-generics-th/src/Generics/Kind/: TH.hs
kind-generics-th/tests/: Main.hs
kind-generics/src/Generics/: Kind.hs
kind-generics/src/Generics/Kind/: Atom.hs  Examples.hs  Rec.hs  View.hs
kind-generics/src/Generics/Kind/Derive/: Eq.hs  Functor.hs
kind-generics/src/Generics/Kind/Rec/: Examples.hs
src/GHC/Generics/: Extra.hs
src/Generics/: Kind.hs
src/Generics/Kind/: Atom.hs  Examples.hs  ListOfTypes.hs
src/Generics/Kind/Derive/: Eq.hs  Functor.hs
unbound-kind-generics/: CHANGELOG.md  unbound-kind-generics.cabal
unbound-kind-generics/src/Unbound/Generics/LocallyNameless/Kind/: Derive.hs  Example.hs
unmantained/kind-algebras/src/Generics/Kind/: Inductor.hs  RecursorConstraints.hs
