cabal-version:       >=1.10
name:                kind-apply
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Alejandro Serrano
maintainer:          trupill@gmail.com
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Data.PolyKinded,
                       Data.PolyKinded.Atom,
                       Data.PolyKinded.Functor
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
