cabal-version:       >=1.10
name:                kind-generics-deriving
version:             0.1.0.0
synopsis:            Generic programming in GHC style for arbitrary kinds and GADTs.
description:         This package provides automatic derivation for a wide range of classes using `kind-generics`.
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Alejandro Serrano
maintainer:          trupill@gmail.com
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  README.md

source-repository head
  type:     git
  location: https://gitlab.com/trupill/kind-generics.git

library
  exposed-modules:     Generics.Kind.Derive.Eq,
                       Generics.Kind.Derive.EqTwoParams,
                       Generics.Kind.Derive.FunctorPosition,
                       Generics.Kind.Derive.FunctorOne,
                       Generics.Kind.Derive.Traversable,
                       Generics.Kind.Derive.KFunctor,
                       Generics.Kind.Derive.Examples
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <5, kind-apply, kind-generics >= 0.2.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fprint-explicit-kinds
