cabal-version:       >=1.10
name:                kind-generics-sop
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Alejandro Serrano
maintainer:          trupill@gmail.com
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Generics.SOP.Kind
                       -- Generics.Kind.SOP.Examples,
                       -- Generics.Kind.SOP.Derive.Eq,
                       -- Generics.Kind.SOP. Derive.Functor
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <5, kind-apply, sop-core
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
